resolved the white space situation on the side of the doc, got rid of the scroll bar at bottom.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,10 +296,7 @@ label {
    width: 80rem;
    height: 20rem;
 }
-body {
-   padding: 0.2em;
-   margin: 0.3em;
-}
+
 #form-div {
    padding-top: 2rem;
 }
@@ -351,4 +348,12 @@ main {
 .moreHotelResults {
    position: relative;
    left: 33rem;
+}
+
+html, body {
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden;
 }
